--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo">
         <!-- Customize your theme here. -->
 
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
 
     </style>
+
+
+    <style name="AppTheme.ActionBar" parent="android:style/Widget.Holo.ActionBar" >
+
+        <item name="android:background">#FF333333</item>
+        <item name="android:titleTextStyle">@style/AppTheme.ActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="AppTheme.ActionBar.TitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+
+        <item name="android:textColor">#FFEECCAA</item>
+
+        </style>
 
 
     <style name="ClockText"  >
